# Lumiboot

./: .bochsrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cmake/: ia16-elf.cmake
.github/workflows/: build.yml
bios/: CMakeLists.txt
bios/data/: charset.c  floppy.c  keycode.c  logo.c  system.c  video.c  vtable.c
bios/debug/: debug.c  gdbstub.c  interrupt_0Bh.S  interrupt_dbg.S
bios/drivers/audio/: spk.c
bios/drivers/chipset/: dma.c  pic.c  pit.c
bios/drivers/disk/: ata.c  atapi.c  fdc.c
bios/drivers/hid/: kbd.c  kbd_at.c
bios/drivers/misc/: cmos.c  i8042.c  lpt.c  uart.c
bios/include/: assert.h  attrib.h  bios.h  config.h  debug.h  drivers.h  edd.h  graphics.h  interrupt.h  io.h  iso9660.h  print.h  stdio.h  string.h  tui.h  utility.h
bios/include/data/: charset.h  config.h  floppy.h  keycode.h  system.h  video.h
bios/include/debug/: gdbstub.h  gfx.h
bios/include/drivers/audio/: spk.h
bios/include/drivers/chipset/: dma.h  pic.h  pit.h
bios/include/drivers/chipset/at/: dma.h  pic.h
bios/include/drivers/chipset/xt/: dma.h  pic.h
bios/include/drivers/disk/: ata.h  atapi.h  fdc.h
bios/include/drivers/hid/: kbd.h  kbd_at.h  kbd_xt.h
bios/include/drivers/misc/: cmos.h  i8042.h  lpt.h  ppi.h  uart.h
bios/include/runtime/: sanitizer.h
bios/include/services/: block.h  boot.h  floppy.h  keyboard.h  printer.h  serial.h  system.h  time.h  video.h
bios/include/setup/: setup.h
bios/include/system/: block.h  boot.h  data.h  gdt.h  pmode.h  system.h  wait.h
bios/linker/: ia16-script.ld
bios/runtime/: print.c  ssp.c  stdio.c  string.c  ubsan.c
bios/services/: block.c  boot.S  boot.c  keyboard.c  print.c  printer.c  serial.c  system.c  time.c  video.c
bios/services/interface/: boot.c  disk.c  keyboard.c  system.c  video.c
bios/services/interrupts/: interrupt_02.S  interrupt_05.S  interrupt_08.S  interrupt_09.S  interrupt_0E.S  interrupt_10.S  interrupt_11.S  interrupt_12.S  interrupt_13.S  interrupt_14.S  interrupt_15.S  interrupt_16.S  interrupt_17.S  interrupt_18.S  interrupt_19.S  interrupt_1A.S  interrupt_70.S  interrupt_XX.S
bios/setup/: setup.c  tui.c
bios/system/: block.c  boot.S  boot.c  data.c  entry.S  interrupt.c  memory.c  oprom.c  pmode.S  reset.S  start.c  system.c  wait.c
